# QGIS-Plugins-Website

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  INSTALL.md  SECURITY_SCANNING.md  auth.json  nav-config.json  readme.md  setup.cfg  shell.nix  vscode.sh
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_website.yml  dev.yml  feature_request.yml  security_check.yml
.github/workflows/: build_push_image.yml  close-not-related-issues.yml  docker.yml  playwright-e2e.yml.template  release-drafter.yml  test.yaml
dockerize/: .env.template  Makefile  README.md  docker-compose.yml  docker-qt6-validator.dockerfile
dockerize/docker/: Dockerfile  REQUIREMENTS.txt  uwsgi.conf
dockerize/production/: Dockerfile
dockerize/scripts/: deploy.sh  renew-ssl.sh
docs/: HOTFIX.md  LABELS.md  RELEASE-COMMS-TEMPLATE.md  RELEASE-MAJOR.md  RELEASE-MINOR.md  RELEASING.md  oauth-setup.md
playwright/ci-test/: .gitignore  (+5 more)
qgis-app/: REQUIREMENTS_plugins.txt  custom_haystack_urls.py  docs.py  homepage.py  middleware.py  package-lock.json  package.json  qgis_context_processor.py  settings.py  settings_auth.py  settings_docker.py  settings_local.py.templ  settings_local_vagrant.py  social_forms.py  urls.py  webpack-stats.json  webpack.config.js
scripts/: cve_table.py  sbom_table.py
tools/security-scan-cli/: .pre-commit-hooks.yaml  README.md  pyproject.toml
tools/security-scan-cli/qgis_plugin_security/: __init__.py  cli.py  security_scanner.py
tools/security-scan-cli/tests/: test_cli.py
vagrant_assets/: setup_config.sh  setup_django.sh
(+278 files in other folders)
